made the user choose the ServerConnector and set it, thus allows us to compile everything (both Jersies and JBoss) at once.