@@ -6,13 +6,11 @@ package com.applitools.eyes;
 import com.applitools.utils.ArgumentGuard;
 import com.applitools.utils.GeneralUtils;
 import com.fasterxml.jackson.databind.SerializationFeature;
-import org.apache.commons.codec.binary.Base64;
+import com.sun.jersey.api.client.ClientResponse;
+import com.sun.jersey.api.client.WebResource;
 
-import javax.ws.rs.client.Entity;
-import javax.ws.rs.client.Invocation;
-import javax.ws.rs.client.WebTarget;
 import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
+import javax.xml.bind.DatatypeConverter;
 import java.io.ByteArrayOutputStream;
 import java.io.DataOutputStream;
 import java.io.IOException;
@@ -25,29 +23,22 @@ import java.util.TimeZone;
 /**
  * Provides an API for communication with the Applitools agent
  */
-public class JBossServerConnector extends RestClient
-        implements ServerConnector {
+public class ServerConnector extends RestClient
+        implements IServerConnector {
 
     private static final int TIMEOUT = 1000 * 60 * 5; // 5 Minutes
     private static final String API_PATH = "/api/sessions/running";
     private static final String DEFAULT_CHARSET_NAME = "UTF-8";
 
-    protected String sdkName;
     private String apiKey = null;
 
     /***
-     *
      * @param logger A logger instance.
-     * @param sdkName An identifier for the current agent. Can be any string.
      * @param serverUrl The URI of the Eyes server.
      */
-    public JBossServerConnector(Logger logger, String sdkName,
-                                URI serverUrl) {
+    public ServerConnector(Logger logger, URI serverUrl) {
         super(logger, serverUrl, TIMEOUT);
-
-        this.sdkName = sdkName;
         endPoint = endPoint.path(API_PATH);
-
     }
 
     /**
@@ -127,7 +118,7 @@ public class JBossServerConnector extends RestClient
         ArgumentGuard.notNull(sessionStartInfo, "sessionStartInfo");
 
         String postData;
-        Response response;
+        ClientResponse response;
         int statusCode;
         List<Integer> validStatusCodes;
         boolean isNewSession;
@@ -148,24 +139,25 @@ public class JBossServerConnector extends RestClient
 
         try {
             response = endPoint.queryParam("apiKey", getApiKey()).
-                    request(MediaType.APPLICATION_JSON).
-                    post(Entity.json(postData));
+                    accept(MediaType.APPLICATION_JSON).
+                    entity(postData, MediaType.APPLICATION_JSON_TYPE).
+                    post(ClientResponse.class);
         } catch (RuntimeException e) {
-            logger.log("Server request failed: " + e.getMessage());
+            logger.log("startSession(): Server request failed: " + e.getMessage());
             throw e;
         }
 
         // Ok, let's create the running session from the response
         validStatusCodes = new ArrayList<>();
-        validStatusCodes.add(Response.Status.OK.getStatusCode());
-        validStatusCodes.add(Response.Status.CREATED.getStatusCode());
+        validStatusCodes.add(ClientResponse.Status.OK.getStatusCode());
+        validStatusCodes.add(ClientResponse.Status.CREATED.getStatusCode());
 
         runningSession = parseResponseWithJsonData(response, validStatusCodes,
                 RunningSession.class);
 
         // If this is a new session, we set this flag.
         statusCode = response.getStatus();
-        isNewSession = (statusCode == Response.Status.CREATED.getStatusCode());
+        isNewSession = (statusCode == ClientResponse.Status.CREATED.getStatusCode());
         runningSession.setIsNewSession(isNewSession);
 
         return runningSession;
@@ -186,27 +178,27 @@ public class JBossServerConnector extends RestClient
         ArgumentGuard.notNull(runningSession, "runningSession");
 
         final String sessionId = runningSession.getId();
-        Response response;
+        ClientResponse response;
         List<Integer> validStatusCodes;
         TestResults result;
 
         HttpMethodCall delete = new HttpMethodCall() {
-            public Response call() {
+            public ClientResponse call() {
 
                 String currentTime = GeneralUtils.toRfc1123(
                         Calendar.getInstance(TimeZone.getTimeZone("UTC")));
 
                 // Building the request
-                Invocation.Builder invocationBuilder = endPoint.path(sessionId)
+                WebResource.Builder builder = endPoint.path(sessionId)
                         .queryParam("apiKey", getApiKey())
                         .queryParam("aborted", String.valueOf(isAborted))
                         .queryParam("updateBaseline", String.valueOf(save))
-                        .request(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON)
                         .header("Eyes-Expect", "202-accepted")
                         .header("Eyes-Date", currentTime);
 
                 // Actually perform the method call and return the result
-                return invocationBuilder.delete();
+                return builder.delete(ClientResponse.class);
             }
         };
 
@@ -214,11 +206,28 @@ public class JBossServerConnector extends RestClient
 
         // Ok, let's create the running session from the response
         validStatusCodes = new ArrayList<>();
-        validStatusCodes.add(Response.Status.OK.getStatusCode());
+        validStatusCodes.add(ClientResponse.Status.OK.getStatusCode());
 
         result = parseResponseWithJsonData(response, validStatusCodes,
                 TestResults.class);
         return result;
+    }
+
+    @Override
+    public void deleteSession(TestResults testResults) {
+        ArgumentGuard.notNull(testResults, "testResults");
+
+        WebResource sessionsResources = restClient.resource(serverUrl);
+        WebResource.Builder builder = sessionsResources
+                .path("/api/sessions/batches/")
+                .path(testResults.getBatchId())
+                .path("/")
+                .path(testResults.getId())
+                .queryParam("apiKey", getApiKey())
+                .queryParam("AccessToken", testResults.getSecretToken())
+                .accept(MediaType.APPLICATION_JSON);
+
+        builder.delete();
     }
 
     /**
@@ -238,13 +247,13 @@ public class JBossServerConnector extends RestClient
         ArgumentGuard.notNull(runningSession, "runningSession");
         ArgumentGuard.notNull(matchData, "data");
 
-        Response response;
+        ClientResponse response;
         List<Integer> validStatusCodes;
         MatchResult result;
         String jsonData;
 
         // since we rather not add an empty "tag" param
-        WebTarget runningSessionsEndpoint =
+        WebResource runningSessionsEndpoint =
                 endPoint.path(runningSession.getId());
 
         // Serializing data into JSON (we'll treat it as binary later).
@@ -254,7 +263,7 @@ public class JBossServerConnector extends RestClient
             jsonData = jsonMapper.writeValueAsString(matchData);
         } catch (IOException e) {
             throw new EyesException("Failed to serialize data for matchWindow!",
-                                    e);
+                    e);
         }
 
         // Convert the JSON to binary.
@@ -271,7 +280,7 @@ public class JBossServerConnector extends RestClient
 
         // Getting the screenshot's bytes (notice this can be either
         // compressed/uncompressed form).
-        byte[] screenshot = Base64.decodeBase64(
+        byte[] screenshot = DatatypeConverter.parseBase64Binary(
                 matchData.getAppOutput().getScreenshot64());
 
         // Ok, let's create the request data
@@ -296,13 +305,13 @@ public class JBossServerConnector extends RestClient
 
         // Sending the request
         response = runningSessionsEndpoint.queryParam("apiKey", getApiKey()).
-                request(MediaType.APPLICATION_JSON).
-                post(Entity.entity(requestData,
-                        MediaType.APPLICATION_OCTET_STREAM));
+                accept(MediaType.APPLICATION_JSON).
+                entity(requestData, MediaType.APPLICATION_OCTET_STREAM_TYPE).
+                post(ClientResponse.class);
 
         // Ok, let's create the running session from the response
         validStatusCodes = new ArrayList<>(1);
-        validStatusCodes.add(Response.Status.OK.getStatusCode());
+        validStatusCodes.add(ClientResponse.Status.OK.getStatusCode());
 
         result = parseResponseWithJsonData(response, validStatusCodes,
                 MatchResult.class);
